package seedu.duke.exceptions;

public class StorageException extends Exception{
    public StorageException(String message){
        super(message);
    }
}
